@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="4.00.24">
+<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="4.00.25">
     <requires>
         <!--<import addon="xbmc.python" version="2.20.0" />-->
+        <!--<import addon="script.theoath.metadata" />-->
         <import addon="script.theoath.artwork" />
-        <import addon="script.theoath.metadata" />
         <import addon="script.module.resolveurl" />
         <import addon="script.module.requests" />
         <import addon="script.module.oathscrapers" />
